<resources>
    <string name="app_name" translatable="false">seaseed</string>

    <string name="login">Login</string>
    <string name="register">Sign-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="create_new_account">Don\'t have an account? Sign up</string>
    <string name="OrLine">OR</string>
    <string name="alreadyHaveAnAccount">Already have an account? Login</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="emailError">Invalid email address, Please enter a valid email</string>
    <string name="passwordError">Invalid password, Please enter at least 8 characters</string>
    <string name="confirmPasswordError">Passwords do not match</string>
    <string name="emailError2">Email already in use</string>
    <string name="emailOrPasswordError">Invalid email and/or password</string>
    <string name="user_setup">USER SETUP</string>
    <string name="freediver_setup">FREEDIVER SETUP</string>
    <string name="username">Username</string>
    <string name="verify_your_email_address">Verify your email address</string>
    <string name="verification_instructions">We have sent a verification link to your email.\n\nClick on the link to complete the registration process.\nYou might need to check your spam folder.</string>
    <string name="verify">Verify</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="didnt_receive_the_email">Didn\'t receive the email?</string>
    <string name="birthDate">Birth Date</string>
    <string name="age_restirction">• You must be at least 16 years old to use this app.</string>
    <string name="bio">Bio (Optional)</string>
    <string name="free_diver">Free Diver</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="account_type">Account Type</string>
    <string name="profile">PROFILE</string>
    <string name="settings">SETTINGS</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="apply">Apply</string>
    <string name="confirmDiscardChanges">Confirm Discard Changes</string>
    <string name="confirmDiscardChangesMessage">Are you sure you want to discard changes?\n</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="clearAll">Clear All</string>
    <string name="confirmChanges">Confirm Changes</string>
    <string name="confirmChangesMessage">Are you sure you want to apply changes?</string>
    <string name="logout">Logout</string>
    <string name="confirmLogout">Confirm Logout</string>
    <string name="confirmLogoutMessage">Are you sure you want to log out of seaseed?</string>
    <string name="search">Search</string>
    <string name="username_restirction">• Username must be numbers, spaces or English characters.</string>

    <!-- Session Package Creation-->
    <string name="sessionDescription">Session Description:</string>
    <string name="sessionDescriptionGuideline">• Provide a detailed description of the session, including the key attractions and activities.\n• Mention any historical or cultural significance of the session.</string>

    <string name="itinerary">Itinerary:</string>
    <string name="ItineraryGuideline">• Break down the session day by day or point by point.\n• Specify the starting and ending times for each activity.\n• Include any breaks or free time.</string>

    <string name="duration">Duration:</string>
    <string name="durationGuideline">• Clearly state the total duration of the session.\n• Include estimated times for each activity.</string>

    <string name="meetingPoint">Meeting Point:</string>
    <string name="meetingPointGuideline">• Clearly specify where the session begins.\n• Include any important details, such as landmarks or specific instructions.</string>

    <string name="includedServices">Inclusions:</string>
    <string name="includedServicesGuideline">• List what is included in the session package (e.g., transportation, meals, entrance fees).\n• Specify if there are any optional add-ons or upgrades.</string>

    <string name="excludedServices">Excluded Services:</string>
    <string name="excludedServicesGuideline">• Clearly state what is not included in the package.\n• This may include personal expenses, tips, or optional activities.</string>

    <string name="price">Price:</string>
    <string name="priceGuideline">• Clearly state the cost of the package.\n• Specify if there are any discounts for certain groups or seasons.</string>

    <string name="groupSize">Group Size:</string>
    <string name="groupSizeGuideline">• Indicate the maximum number of participants for the session (Value must be numeric).</string>

    <string name="cancellationPolicy">Cancellation Policy:</string>
    <string name="cancellationPolicyGuideline">• Clearly outline the cancellation policy, including any fees or refund conditions.</string>

    <string name="specialRequirements">Special Requirements:</string>
    <string name="specialRequirementsGuideline">• Highlight any specific requirements or considerations for participants (e.g, physical fitness levels, age restrictions).</string>

    <string name="additionalInformation">Additional Information:</string>
    <string name="additionalInformationGuideline">• Include any other relevant information, such as local customs, safety tips, or recommended items to bring.</string>

    <string name="photosAndMultimedia">Photos and Multimedia:</string>

    <string name="createPackage">Create Package</string>
    <string name="packageName">Package Name</string>
    <string name="packageCoverImage">Package Cover Image:</string>
    <string name="includedCountries">Included Countries:</string>
    <string name="selectCountries">-Select Countries-</string>
    <string name="editPackage">Edit Package</string>
    <string name="package_name_can_not_be_changed_after_creation">• Package name can not be changed after creation.</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_package">Delete Package</string>

    <string name="confirmPackageDeletion">Confirm Package Deletion</string>
    <string name="confirmPackageDeletionMessage">Are you sure you want to delete package?</string>
    <string name="loginMessage">Logging In…</string>
    <string name="confirmPackageCreationMessage">Are you sure you want create a new package?</string>
    <string name="package_color">Package Color:</string>
    <string name="cancel_session">Delete Session</string>
    <string name="confirmSessionCancellationMessage">Are you sure you want to cancel session?</string>
    <string name="confirmSessionCancellation">Confirm Session Cancellation</string>
    <string name="review_guideline">• Provide honest and constructive feedback about your free diving experience.</string>
    <string name="my_booked_sessions">MY BOOKED SESSIONS</string>
    <string name="to">" To "</string>
    <string name="add_new_session">Add New Session</string>
    <string name="session_date">Session Date:</string>
    <string name="session_package">Session Package:</string>
    <string name="rating">Rating:</string>
    <string name="review">Review:</string>
    <string name="add_review">Add Review</string>
    <string name="free_diver2">Free Diver:</string>
    <string name="available_spots">Available Spots:</string>
    <string name="book_session">Book Session</string>
    <string name="send_message">Send Message</string>
    <string name="my_session_packages">SESSION PACKAGES</string>
    <string name="this_user_has_no_available_session_packages">No available session packages</string>
    <string name="my_reviews">REVIEWS</string>
    <string name="this_user_has_no_available_reviews">No available reviews</string>
    <string name="out_of_5_stars">Out of\n5 Stars</string>
    <string name="user_type">User Type:</string>
    <string name="country">Country:</string>
    <string name="you_have_no_available_session_packages">You have no available session packages</string>
    <string name="you_have_no_available_reviews">You have no available reviews</string>
    <string name="you_have_already_booked_a_session_during_this_period">You have already booked a session during this period</string>
    <string name="session_booked_successfully">Session booked successfully!</string>
    <string name="sessions_must_be_set_up_at_least_3_days_in_advance">Sessions must be set up at least 3 days in advance</string>
    <string name="cancellation_is_not_allowed_for_ongoing_or_close_occurring_sessions">Cancellation is not allowed for ongoing/close occurring sessions</string>
    <string name="package_with_the_same_name_already_exists">Package with the same name already exists</string>
    <string name="please_wait_while_logging_in">Diving in...</string>
    <string name="ago">ago</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="minutes">minutes</string>
    <string name="just_now">Just now</string>
    <string name="years">years</string>
    <string name="hours">hours</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>
    <string name="delete_review_message">Are you sure you want to delete review?</string>
    <string name="default_web_client_id" translatable="false">851793428696-v5v6hrrjmq9hasohed3q94fgocnnkcgu.apps.googleusercontent.com</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forgot_password_no_qm">Forgot Password</string>
    <string name="user_verification">USER VERIFICATION</string>
    <string name="please_provide_your_account_email_address_for_which_you_want_to_reset_your_password">Please provide your account\'s email address for which you want to reset your password</string>
    <string name="password_reset_email_sent_please_check_your_email">Password reset email sent. Please check your email.</string>
    <string name="failed_to_send_password_reset_email_please_try_again">Failed to send password reset email. Please try again.</string>
    <string name="gender_colon">Gender:</string>
    <string name="messages">Messages</string>
    <string name="chats">CHATS</string>
    <string name="enter_message">Enter Message</string>
    <string name="you_have_no_active_chats">You have no active chats</string>


</resources>