<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SessionPackageCreationFragment"
    android:background="@color/dark_primary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <!-- Main overlay -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_back_bg"

                android:visibility="visible">


                <ImageView
                    android:id="@+id/packageCoverImage"
                    android:layout_width="257dp"
                    android:layout_height="204dp"
                    android:src="@drawable/package_image"
                    app:layout_constraintDimensionRatio="4:3"
                    app:layout_constraintEnd_toEndOf="@+id/packageNameInput"
                    app:layout_constraintStart_toStartOf="@+id/packageNameInput"
                    app:layout_constraintTop_toBottomOf="@+id/textView0" />

                <EditText
                    android:id="@+id/packageNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:background="@drawable/big_input_bg"

                    android:ems="10"
                    android:fontFamily="@font/lexend"
                    android:gravity="center"
                    android:hint="@string/packageName"
                    android:inputType="textShortMessage"
                    android:padding="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="25sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="locale"

                    android:fontFamily="@font/lexend"
                    android:text="@string/package_name_can_not_be_changed_after_creation"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@+id/packageNameInput"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/packageNameInput"
                    app:layout_constraintTop_toBottomOf="@+id/packageNameInput" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/colorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layoutDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/packageCoverImage">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexend"
                        android:text="@string/package_color"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/colorView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/colorView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignBaseline="@id/textView18"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/circe_icon"
                        android:backgroundTint="@color/orange_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView18"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/sessionDescription"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/colorPicker" />

                <EditText
                    android:id="@+id/sessionDescInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:fontFamily="@font/lexend"
                    android:hint="@string/sessionDescriptionGuideline"
                    android:paddingLeft="20dp"
                    android:paddingTop="13dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="13dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:gravity="start|top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/itinerary"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sessionDescInput" />

                <EditText
                    android:id="@+id/itineraryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:fontFamily="@font/lexend"
                    android:hint="@string/ItineraryGuideline"
                    android:paddingLeft="20dp"
                    android:paddingTop="13dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="13dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:gravity="start|top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/duration"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itineraryInput" />

                <EditText
                    android:id="@+id/durationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:fontFamily="@font/lexend"
                    android:hint="@string/durationGuideline"
                    android:paddingLeft="20dp"
                    android:paddingTop="13dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="13dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:gravity="start|top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/includedServices"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/durationInput" />

                <EditText
                    android:id="@+id/includedServicesInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:fontFamily="@font/lexend"
                    android:gravity="start|top"
                    android:hint="@string/includedServicesGuideline"
                    android:paddingLeft="20dp"
                    android:paddingTop="13dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="13dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/includedServicesInput" />

                <EditText
                    android:id="@+id/priceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg"
                    android:fontFamily="@font/lexend"
                    android:gravity="start|top"
                    android:hint="@string/priceGuideline"
                    android:paddingLeft="20dp"
                    android:paddingTop="13dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="13dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <Button
                    android:id="@+id/btnCreatePackage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/lexend"
                    android:text="@string/createPackage"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priceInput" />

            </androidx.constraintlayout.widget.ConstraintLayout>





            <!-- Loading overlay -->
            <RelativeLayout
                android:id="@+id/loadingOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_dark"
                android:visibility="gone"
                android:backgroundTint="@color/dark_primary">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/orange_primary"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Top overlay -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/topRelativeLayout"
        android:layoutDirection="ltr">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_primary"/>

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/arrow_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lexend"
            android:gravity="center"
            android:text="@string/createPackage"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </RelativeLayout>

</FrameLayout>